# Potato-Messenger

./: .gitignore  LICENSE  README.md  dbWaitStartCelery.sh  dbWaitStartDjango.sh  docker-compose.yml  dockerfile  pyproject.toml  requirements.txt
messenger/: consumers.py  forms.py  models.py  routing.py  urls.py  views.py
messenger/migrations/: 0001_initial.py  0002_auto_20210410_2021.py  0003_remove_profile_custom_status.py  0004_auto_20210414_1339.py  0005_auto_20210414_1342.py  0006_profile_online.py  0007_profile_visible.py  0008_profile_profile_picture.py  0009_auto_20210426_1906.py  0010_auto_20210426_1911.py  0011_auto_20210427_0010.py
messenger/static/messenger/: account.css  auth.css  base.css  chatPageHandler.js  chatReader.js  chatSocketManager.js  chatpage.css  colors.css  dropDown.js  editButton.js  index.css  onlineSocketManager.js  profilePic.css  profilePic.js  sanitizer.js  webPushEnabler.js
messenger/templates/messenger/: account.html  base.html  chatpage.html  empty.html  index.html  login.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_email.txt  password_reset_subject.txt  reset_password.html  signup.html  user_account.html
potato/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
