[tool.poetry]
name = "potato-messenger"
version = "0.1.0"
description = "A Chat Application"
authors = ["advin4603 <github.com/advin4603>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1.7"
channels = "^3.0.3"
Pillow = "^8.2.0"
mysqlclient = "^2.0.3"
channels-redis = "^3.2.0"
celery = "^5.0.5"
redis = "^3.5.3"
django-celery-email = "^3.0.0"
django-webpush = "^0.3.3"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.1"
black = "^21.4b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
